[package]
name = "slackrypt"
version = "0.1.0"
authors = ["jeffrade <jeffrade@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
simple_logger = "1.6"
rand = "0.7.3"
#rsa = "0.2.0" Need RSA directly from git until a new release is available
rsa = { git = "https://github.com/RustCrypto/RSA", rev = "94ce39d9b7f10eb8da9fa197646663c90b96176c" }
pem = "0.7"
aes-soft = "0.3.3"
block-modes = "0.3.3"
hex = "0.4.2"
fltk = "^0.5"