[package]
name = "slackrypt-client"
version = "0.3.0"
authors = ["jeffrade <jeffrade@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
aes-soft = "^0.4"
base64 = "^0.13"
block-modes = "^0.4"
crc24 = "^0.1"
fltk = "^0.6"
log = { version = "^0.4", features = ["std", "serde"] }
pem = "^0.7"
rand = "^0.7"
reqwest = { version = "^0.11", features = ["json"] }
#rsa = "0.2.0" Need RSA directly from git until a new release is available
rsa = { git = "https://github.com/RustCrypto/RSA", rev = "94ce39d9b7f10eb8da9fa197646663c90b96176c" }
serde_json = "^1"
simple_logger = "^1"
tokio = { version = "^0.2", features = ["full"] }
