[package]
name = "slackrypt-server"
version = "0.1.0"
authors = ["Jeff Rade <jeffrade@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
simple_logger = "1.11"

bytes = "0.5.2"
futures = "0.3.5"
json = "0.12"
rand = "0.7.3"
rocket = "0.4.6"
rocket_contrib = "0.4.6"
rusqlite = "0.23.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slack = "0.25.0"
