[package]
name = "slackrypt-server"
version = "0.1.0"
authors = ["Jeff Rade <jeffrade@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "^1.0"
futures = "^0.3"
json = "^0.12"
log = { version = "^0.4", features = ["std", "serde"] }
rand = "^0.8"
rocket = "^0.4"
rocket_contrib = "^0.4"
rusqlite = "^0.25"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
simple_logger = "^1"
slack = "^0.25"
